<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/toppings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toppings"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/checkCrema"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crema"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/chechChocolate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chocolate"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/cantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cantidad"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/menos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="restarTopping"
            android:text="@string/menos" />

        <TextView
            android:id="@+id/numero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cantidadNumerica" />

        <Button
            android:id="@+id/mas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="sumarTopping"
            android:text="@string/mas" />
    </LinearLayout>

    <Button
        android:id="@+id/order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="mostrarToast"
        android:text="@string/order" />
</LinearLayout>